--- a/Oefening 1/oefening1a.html
+++ b/Oefening 1/oefening1a.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
-	
 		<meta charset="utf-8">
 		<title>Oefening 1</title>
 		<script>
-			document.write('<p>Dit is mijn eerste kennismaking met Javascript.</p>');
+			document.write('<h1>Oefening 1</h1><p>Dit is mijn eerste kennismaking met Javascript.</p>');
 		</script>
 	</head>
 	<body>
