--- a/start.html
+++ b/start.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
-	
 		<meta charset="utf-8">
 		<title>Titel</title>
-        <style>
-        </style>
+		<script>
+        </script>
 	</head>
-
 	<body>
 
 
