--- a/Oefening 3/oefening3.html
+++ b/Oefening 3/oefening3.html
@@ -5,7 +5,7 @@
 		<title>Titel</title>
 		<style>
 			table {
-				border-spacing: 0;
+				border-collapse: collapse;
 				border: 1px solid black;
 			}
 			th,td {
