--- a/Oefening 6/oefening6.html
+++ b/Oefening 6/oefening6.html
@@ -6,7 +6,7 @@
 		<script>
         var x, test;
         x = '';
-        test = prompt("Geef een waarde in: (Kies tussen: hello, world, javascript, waarde >= 6, !javascript, waarde >= 5 & <= 10)");
+        test = prompt("Geef een waarde in: (Kies tussen: hello, world, javascript, waarde >= 6, !javascript, waarde >= 5 & <= 10)", 'Title');
 
         if (test === "javascript") {
             x += "Dit is een boodschap die enkel wordt getoond als de waarde van de variabele test gelijk is aan javascript";
