--- a/Oefening 9/oef9.html
+++ b/Oefening 9/oef9.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Titel</title>
-		<script>
+    <head>
+        <meta charset="utf-8">
+        <title>Titel oef 9</title>
+        <script>
         var merk, output;
         merk = prompt('Geef een merk in:');
         //merk = merk.toLowerCase(); //gebruiken bij de if else
@@ -18,21 +18,23 @@
         //of via een switch:
         switch (merk.toLowerCase()) {
             case 'bmw':
-                output = 'BMW is Duits'
+                output = 'BMW is Duits';
                 break;
             case 'renault':
-                output = 'Renault is Frans'
+                output = 'Renault is Frans';
                 break;
+            case 'ferrari':
+                output = 'Ferrari is Italiaans';
             default:
                 output = 'Het is niet gekend in onze database van welk land het opgegeven merk '+ merk + ' afkomstig is'
         }
 
         document.write(output);
         </script>
-	</head>
-	<body>
+    </head>
+    <body>
 
 
-		
-	</body>
+        
+    </body>
 </html>
