nieuwe oefeningen tem 17

--- a/Oefening 15/oef15.html
+++ b/Oefening 15/oef15.html
@@ -15,7 +15,7 @@
         doeBereken(getal1, getal2);
         function doeBereken(getal1, getal2) {
             resultaat = getal1 * getal2;
-            return showResult();
+            showResult();
         }
         function showResult() {
             document.getElementById('result').innerHTML = resultaat;
