nieuwe oefening op links en niet uitvoeren van default action

--- a/Oefening 25/oef25.html
+++ b/Oefening 25/oef25.html
@@ -50,7 +50,7 @@
 	<body>
         <form id="login" action="js_form_ontvanger.html">
             <label for="uname">User Name: </label>
-            <input type="text" id="uname" required>
+            <input type="text" id="uname" placeholder="User Martin" required> <!-- Uitbreiding placeholder tekst -->
             <label for="pword">Password (min 8 char): </label>
             <input type="password" id="pword" pattern=".{8,}" required> <!-- min length via pattern voor oef 25-2 -->
             <input type="submit" value="Aanmelden">
