aanpassing oef 24 extra, correctere versie

--- a/Oefening 24/oef24-2.html
+++ b/Oefening 24/oef24-2.html
@@ -7,7 +7,7 @@
        
         function toggleBulb(element) {
             //var element = document.getElementById('bulb'); //niet nodig dmv 'this'
-            if(element.src.match('bulboff')) {
+            if(element.src.match('bulboff.png')) {
                 element.src = 'bulbon.png';
             } else {
                 element.src = 'bulboff.png';
