--- a/Oefening 30/oef30.html
+++ b/Oefening 30/oef30.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Titel</title>
-		<script>
-        </script>
-	</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Oefening 30</title>
+        <link href="./css/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="./css/bootstrap.min.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
+        <!-- <script src="./js/bootstrap.min.js"></script> -->
+        <script src="./js/jquery.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        
+    </head>
 	<body>
-
-
-		
+        <form action="" method="post" onsubmit="gotoURL(); return false">
+            <label for="link">
+            <input type="url" id="link">
+            <input type="submit" value="GO!">
+        </form>
+        <script src="./js/script.js"></script>
 	</body>
 </html>
