adding some sql files from exercises

--- a/Oefening API/index.html
+++ b/Oefening API/index.html
@@ -30,7 +30,7 @@ function derdeAjaxRequestPopulate() {
     var url = 'http://api.antwerpen.be/v1/spectql/cultuur/fotoverzamelingfelixarchief:json'; 
     var input = document.getElementById('input-03');
     var dataList = document.getElementById('adres-03');
-    input.placeholder = 'bezig met verwerken...'
+    input.placeholder = 'bezig met verwerken...';
     var xmlhttp = new XMLHttpRequest();
     xmlhttp.open("GET", url, true)
     xmlhttp.send();
